--- a/index.htm
+++ b/index.htm
@@ -237,6 +237,8 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 <ul>
 
 
+<li>04/2025: Our research paper <b>"PCDE: A Personalized Conversational Debiasing Framework for Next POI Recommendation with Uncertain Check-ins"</b> was accepted by the top journal, <b>Neural Networks</b> (JCR Q1)</li>
+
 <li>03/2025: Our research paper <b>"Inter-Class and Intra-Class Re-Weighting for Topological-Imbalance Graph Neural Networks"</b> was accepted by the top journal, <b>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</b> (JCR Q1)</li>
 
 <li>03/2025: Our research paper <b>"PerFedKG: Two-Stage Information-Loop Federated Knowledge graph for Personalized Privacy-Preserving Recommendation Systems"</b> was accepted by the top journal, <b>Science China Information Sciences (SCIS)</b> (JCR Q1, CCF A)</li>
@@ -339,6 +341,7 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 		<li>Dr. Pengfei Ding, PhD Student at Macquarie University, 2021-2024, <i>now a Postdoc Research Fellow at Macquarie University</i></li>
 
 		    <ul>
+            <li>recipient of the Vice-Chancellor's Commendation for Academic Excellence, Macquarie University, 2025</li>
 		   	  <li>recipient of the HDR Raising Star Award, School of Computing, Macquarie University, 2022</li>
 		   	</ul>
 
@@ -412,6 +415,9 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 	<font size="4.7"><b>International Journal Papers</b></font>
 	<br>
 	<ol>
+
+
+<li>C. Li, G. Huang, Z. Sun, L. Zhang, S. Feng, and G. Liu, <b>PCDE: A Personalized Conversational Debiasing Framework for Next POI Recommendation with Uncertain Check-ins</b>, <i>Neural Networks</i> (accepted in 2025).</li>
 
 
 <Li>G. Liu, Z. Zhao, H. Zhou, C. Li, Q. Zeng and G. Liu, <b>Inter-Class and Intra-Class Re-Weighting for Topological-Imbalance Graph Neural Networks</b>, <i>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</i> (accepted in 2025).</li>
