--- a/index.htm
+++ b/index.htm
@@ -236,6 +236,22 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 
 <ul>
 
+<li>04/2025: We have three papers accepted by the top conference <b>IJCAI 2025</b> (CORE A*, CCF A).
+
+        <ul>
+            <li><b>Adaptive Graph Unlearning</b></li>
+              <li><b>GPL4SRec: Graph Multi-Level Aware Prompt Learning for Streaming Recommendation</b></li>
+
+              <li><b>Towards Comprehensive and Prerequisite-Free Explainer for Graph Neural Networks</b></li>
+            </ul>
+
+
+</li>
+
+
+
+
+<li>04/2025: Our research paper <b>"Candidate-aware Graph Prompt-Tuning for Recommendation"</b> was accepted by the top journal, <b>Pattern Recognition</b> (JCR Q1)</li>
 
 <li>04/2025: Our research paper <b>"PCDE: A Personalized Conversational Debiasing Framework for Next POI Recommendation with Uncertain Check-ins"</b> was accepted by the top journal, <b>Neural Networks</b> (JCR Q1)</li>
 
@@ -417,7 +433,12 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 	<ol>
 
 
-<li>C. Li, G. Huang, Z. Sun, L. Zhang, S. Feng, and G. Liu, <b>PCDE: A Personalized Conversational Debiasing Framework for Next POI Recommendation with Uncertain Check-ins</b>, <i>Neural Networks</i> (accepted in 2025).</li>
+
+
+<li>H. Li, G. Liu, Q. Hu, Y. Wang, D. Gong and J. Du, <b>Candidate-aware Graph Prompt-Tuning for Recommendation</b>, <i>Pattern Recognition</i> (accepted in 2025).</li>
+
+
+<li>C. Li, G. Huang, Z. Sun, L. Zhang, S. Feng and G. Liu, <b>PCDE: A Personalized Conversational Debiasing Framework for Next POI Recommendation with Uncertain Check-ins</b>, <i>Neural Networks</i> (accepted in 2025).</li>
 
 
 <Li>G. Liu, Z. Zhao, H. Zhou, C. Li, Q. Zeng and G. Liu, <b>Inter-Class and Intra-Class Re-Weighting for Topological-Imbalance Graph Neural Networks</b>, <i>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</i> (accepted in 2025).</li>
@@ -549,6 +570,14 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
 <font size="4.7"><b>International Conference Papers</b></font>
 	<br>
 	<ol>
+
+
+<li>H. Zhang, P. Ding, Y. Wang, G. Liu, H. Wang and K. Lam, <b>Towards Comprehensive and Prerequisite-Free Explainer for Graph Neural Networks</b>, IJCAI 2025.</li>
+
+
+<li>H. Cang, H. Yuan, J. Fan, L. Zhao, G. Liu and P. Zhao, <b>GPL4SRec: Graph Multi-Level Aware Prompt Learning for Streaming Recommendation</b>, IJCAI 2025.</li>
+
+<li>P. Ding, Y. Wang, G. Liu and J. Zhu, <b>Adaptive Graph Unlearning</b>, IJCAI 2025.</li>
 
 <li>H. Yuan, P. Zhao, J. Fan, J. Fang, G. Liu and V. Shen, <b>Fuzzy Collaborative Reasoning</b>, AAAI 2025.</li>
 
