--- a/index.htm
+++ b/index.htm
@@ -236,6 +236,8 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 
 <ul>
 
+<li>05/2025: Our research paper <b>"GPE: Global Position Embedding for Trajectory Similarity Computation"</b> was accepted by one of the flagship data mining conferences <b>KDD 2025</b> (CORE A*, CCF A).
+
 <li>04/2025: We have three papers accepted by the top conference <b>IJCAI 2025</b> (CORE A*, CCF A).
 
         <ul>
@@ -571,6 +573,9 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
 	<br>
 	<ol>
 
+
+
+<li>Y. Liu, G. Liu, Q. Ma, Z. Li, L. Zhao and A. Liu, <b>GPE: Global Position Embedding for Trajectory Similarity Computation</b>, KDD 2025.</li>
 
 <li>H. Zhang, P. Ding, Y. Wang, G. Liu, H. Wang and K. Lam, <b>Towards Comprehensive and Prerequisite-Free Explainer for Graph Neural Networks</b>, IJCAI 2025.</li>
 
