--- a/index.htm
+++ b/index.htm
@@ -236,6 +236,9 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 
 <ul>
 
+
+<li>07/2025: I have been invited to serve as an <b>Area Chair</b> for <b>KDD 2026</b> (one of the flagship data mining conferences, CORE A*, CCF A)</li>    
+
 <li>05/2025: Our research paper <b>"GPE: Global Position Embedding for Trajectory Similarity Computation"</b> was accepted by one of the flagship data mining conferences <b>KDD 2025</b> (CORE A*, CCF A).
 
 <li>04/2025: We have three papers accepted by the top conference <b>IJCAI 2025</b> (CORE A*, CCF A).
@@ -249,7 +252,6 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 
 
 </li>
-
 
 
 
