--- a/index.htm
+++ b/index.htm
@@ -237,6 +237,9 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 <ul>
 
 
+<li>07/2025: I have been invited to serve as an <b>Associate Chair</b> for <b>CIKM 2026</b> (CORE A)</li>    
+
+
 <li>07/2025: I have been invited to serve as an <b>Area Chair</b> for <b>KDD 2026</b> (one of the flagship data mining conferences, CORE A*, CCF A)</li>    
 
 <li>05/2025: Our research paper <b>"GPE: Global Position Embedding for Trajectory Similarity Computation"</b> was accepted by one of the flagship data mining conferences <b>KDD 2025</b> (CORE A*, CCF A).
@@ -249,7 +252,6 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 
               <li><b>Towards Comprehensive and Prerequisite-Free Explainer for Graph Neural Networks</b></li>
             </ul>
-
 
 </li>
 
@@ -396,7 +398,11 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
 		
         <ul>
        	
-		<li>Rongwei Xu, MRes+PhD Student, 2021-</li>
+		<li>Thamolwan Poopradubsil, PhD Student, 2025-</li>
+        <li>Shuang Wang, PhD Student, 2025-</li>
+        <li>Haoran Ning, PhD Student, 2025-</li>
+        <li>Yiwei Yan, MRes+PhD Student, 2025-</li>
+        <li>Rongwei Xu, MRes+PhD Student, 2021-</li>
 		<li>Xuankai Yang, PhD Student, 2022-</li>
 		<li>Han Zhang, PhD Student, 2023-</li>
 		<li>Huanhuan Yuan, PhD student, 2024-</li>
