--- a/index.htm
+++ b/index.htm
@@ -253,6 +253,19 @@ Transactions on Services Computing, IEEE Transactions on Emerging Topics in Comp
         </ul>
 
 
+<li>01/2026: We have four papers accepted by the top conference <b>WWW 2026</b> (CORE A*, CCF A).
+
+        <ul>
+            <li><b>MARCH: Multi-Teacher Contrastive Hypergraph Distillation</b></li>
+              <li><b>Frequency-Corrupt Based Graph Self-Supervised Learning</b></li>
+              <li><b>Re-understanding Graph Unlearning Through Memorization</b></li>
+              <li><b>LHG: LLM-enhanced and Heterogeneous Graph-induced for Unsupervised Social Event Detection</b></li>
+            </ul>
+
+</li>
+
+
+
 <li> 11/2025: Our research paper <b>"Wavelet Enhanced Adaptive Frequency Filter for Sequential Recommendation"</b> was accepted by the top AI conference, <b>AAAI 2026</b> (CORE A*, CCF A).
 
 
@@ -618,11 +631,22 @@ Recommendation</b>, <i>IEEE Transactions on Computational Social Systems (TCSS),
 <font size="4.7"><b>International Conference Papers</b></font>
 	<br>
 	<ol>
-<li>K. Lotfabad, A. Beheshti, M. Mosharraf, M. Li, P. Asgari and G. Liu, <b>Weakly Supervised Multimodal Claim Verification with Entity-Graph Inference</b>, WWW2026 (DEMO).</li>
+
+
+
+<li>H. Li, M. Zhang, G. Liu, Q. Hu, Y. Wang and J. Du, <b>Frequency-Corrupt Based Graph Self-Supervised Learning</b>, WWW 2026. </li>
+
+
+<li>Z. Qiu, R. Xu, C. Ma, S. Xue, J. Yang, G. Liu, Q. Z. Sheng, A. Beheshti and J. Wu, <b>LHG: LLM-enhanced and Heterogeneous Graph-induced for Unsupervised Social Event Detection</b>, WWW 2026.</li>
+
+
+<li>P. Ding, Y. Wang and G. Liu, <b>Re-understanding Graph Unlearning Through Memorization</b>, WWW 2026.</li>
+
+<li>R. Xu, Z. Qiu, P. Ding, J. Wu, Y. Wang, A. Beheshti and G. Liu, <b>MARCH: Multi-Teacher Contrastive Hypergraph Distillation</b>, WWW 2026.</li>
+
+<li>K. Lotfabad, A. Beheshti, M. Mosharraf, M. Li, P. Asgari and G. Liu, <b>Weakly Supervised Multimodal Claim Verification with Entity-Graph Inference</b>, WWW 2026 (DEMO).</li>
 
 <li>H. Xu, H. Yuan, G. Liu, J. Fang, L. Zhao, and P. Zhao, <b>Wavelet Enhanced Adaptive Frequency Filter for Sequential Recommendation</b>, AAAI 2026.</li>
-
-
 
 <li>F. Liu, H. Cang, H. Yuan, J. Fan, Y. Hao, F. Zhuang, G. Liu, and P. Zhao, <b>How Do Graph Signals Affect Recommendation: Unveiling the Mystery of Low and High-Frequency Graph Signals</b>, KDD 2026.</li>
 
@@ -847,7 +871,7 @@ LLMs-based Sequential Recommendation</b>, ICDE 2025.</li>
        <li>PC Co-Chair, The First Internal Workshops on Knowledge Acquisition, Representation and Management (KARM 2017) in conjunction with WISE2017, Moscow, Russia, 7-11 October, 2017. </li>
        	<li>PC Co-Chair, The Second International Workshop on Big Data Management and Service (BDMS2015) in conjunction with DASFAA2015, Hanoi, Vietnam, 20-23 April, 2015.</li>
 
-       <li>Area Chair: KDD2025</li>
+       <li>Area Chair: KDD2025, KDD2026</li>
        <li>Panel Discussion Chair: ADMA2024
        <li>Special Session Chair: DSAA2020</li>
        <li>Publication Chair: APWeb2014, APWeb2016, BESC2016</li>
@@ -855,7 +879,8 @@ LLMs-based Sequential Recommendation</b>, ICDE 2025.</li>
 
 
 	
-	  <li>PC Member: IJCAI2025(Senior PC), ICDE2025, WWW2025, WSDM2025, KDD2025(Area Chair), SIGIR2025, CIKM2025 (Senior PC), RecSys2025</li>	
+	  <li>PC Member: IJCAI2026, WWW2026 (Senior PC), WSDM2026, KDD2026(Area Chair), SIGIR2026</li>
+      <li>PC Member: IJCAI2025(Senior PC), ICDE2025, WWW2025, WSDM2025, KDD2025(Area Chair), SIGIR2025, CIKM2025 (Senior PC), RecSys2025</li>	
 	  <li>PC Member: KDD2024, WSDM2024, WWW2024, SDM2024, IJCAI2024, CIKM2024, WISE2024</li>
 	  <li>PC Member: ICDE2023, WSDM2023, WWW2023, IJCAI2023, KDD2023, CIKM2023(Senior PC)</li>
 	  <li>PC Member: KDD2022, IJCAI2022, AAAI2022, WWW2022,  IEEE BigComp2022, WISE2022</li>
